[package]
name = "memory-palace"
version = "0.3.5"
edition = "2021"

[profile.release]
panic = "abort"
strip = "debuginfo"
lto = "thin"

[dependencies]
chrono = "0.4"
clap = {version = "4.5", features = ["derive"]}
eframe = "0.30"
flexi_logger = "0.29"
log = "0.4"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
toml = "0.8"
