[package]
name = "memory-palace"
version = "0.6.0"
edition = "2024"

[profile.release]
panic = "abort"
strip = "debuginfo"
lto = "thin"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["cargo", "derive"]}
clap_complete = "4.5.47"
eframe = "0.31.1"
flexi_logger = "0.30.1"
log = "0.4"
rand = "0.9.1"
serde = {version = "1.0", features = ["derive"]}
toml = "0.8.20"
